@@ -1,3 +1,6 @@
+2007-11-24 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/GrampsWidgets.py: ObjEntry, PlaceEntry and NoteEntry inherit from it.
+
 2007-11-24  Douglas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/gen/lib/date.py: had to import calendar by path.name
 	  (so that the import of date_test would work)
